Added some icons and some code changes

--- a/admin_gateway_service/.env.example
+++ b/admin_gateway_service/.env.example
@@ -4,6 +4,9 @@ APP_KEY=base64:lqhT6EY4Uyrw2vNbmFh35YCIcCrMzJCMFcGKYpW+qSo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+API_BASE_URL=http://localhost:8001/api/requests
+API_SECRET_KEY=K4azIgi3Fhw6j7CI9GkjEWCG0SFasaGH
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
