Some minor modifications

--- a/admin_gateway_service/.env.example
+++ b/admin_gateway_service/.env.example
@@ -4,7 +4,7 @@ APP_KEY=base64:lqhT6EY4Uyrw2vNbmFh35YCIcCrMzJCMFcGKYpW+qSo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-API_BASE_URL=http://localhost:8001/api/requests
+API_BASE_URL=http://localhost/api/requests
 API_SECRET_KEY=K4azIgi3Fhw6j7CI9GkjEWCG0SFasaGH
 
 LOG_CHANNEL=stack
@@ -12,11 +12,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=34.172.161.190
 DB_PORT=5432
-DB_DATABASE=strange_admin_db
-DB_USERNAME=postgres
-DB_PASSWORD=root
+DB_DATABASE=sd_admin
+DB_USERNAME=sd-dev
+DB_PASSWORD=Tv(=<]]r<HQP0J?]
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
