--- a/client_gateway_service/.env.example
+++ b/client_gateway_service/.env.example
@@ -12,11 +12,11 @@ ADMIN_ALLOWED_IP=127.0.0.1
 ADMIN_SECRET_KEY=K4azIgi3Fhw6j7CI9GkjEWCG0SFasaGH
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=34.172.161.190
 DB_PORT=5432
-DB_DATABASE=strange_db
-DB_USERNAME=postgres
-DB_PASSWORD=root
+DB_DATABASE=sd_access_request
+DB_USERNAME=sd-dev
+DB_PASSWORD=Tv(=<]]r<HQP0J?]
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
